@@ -1,5 +1,11 @@
 2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/normal/cmdline.c (print_completion): New field
+	prompt_len.
+	(grub_cmdline_get): Handle width properly.
+
+2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/commands/lsacpi.c (options): Add missing terminator.
 
 2012-03-31  Vladimir Serbinenko  <phcoder@gmail.com>
